--- a/Pipfile
+++ b/Pipfile
@@ -10,9 +10,10 @@ numpy = "==1.17.3"
 matplotlib = "==3.1.1"
 scipy = "==1.3.2"
 ipykernel = "==5.1.3"
-bokeh = "==1.3.4"
+bokeh = "*"
 pandas = "==0.25.3"
 holoviews = "*"
+h5py = "*"
 
 [requires]
 python_version = "3.7"
